--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "body-parser": "^1.19.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
-    "mongoose": "^5.9.18"
+    "materialize-css": "^1.0.0-rc.2",
+    "mongoose": "^5.9.18",
+    "sharp": "^0.25.3"
   }
 }
